--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -1,25 +1,25 @@
 leftnav:
 - identifier: a690f008-7f9f-5ffa-d5d5-8bf95e0432da
   name: Syllabus
-  url: /pages/syllabus
+  pageRef: /pages/syllabus
   weight: 10
 - identifier: a09187c5-8ec0-e5e7-d376-bc81a8912bf1
   name: Calendar
-  url: /pages/calendar
+  pageRef: /pages/calendar
   weight: 20
 - identifier: ed400a52-7b26-d6aa-b01f-817dc22dd0be
   name: Readings
-  url: /pages/readings
+  pageRef: /pages/readings
   weight: 30
 - identifier: 68e438e3-eb2d-cbce-ced4-3d19516ee229
   name: Lecture Notes
-  url: /pages/lecture-notes
+  pageRef: /pages/lecture-notes
   weight: 40
 - identifier: 386dc577-9ef4-1b3c-0334-e3391284a521
   name: Assignments
-  url: /pages/assignments
+  pageRef: /pages/assignments
   weight: 50
 - identifier: d465bf4d-440f-f5ea-d8aa-b1c8e2a505cb
   name: Related Resources
-  url: /pages/related-resources
+  pageRef: /pages/related-resources
   weight: 60
